--- a/src/css/style.css
+++ b/src/css/style.css
@@ -65,7 +65,7 @@ header p {
     margin-bottom: 25px;
 }
 
-header a {
+header > a {
     background-image: linear-gradient(to right, #d39536 0%, #b84f26 51%, #d39536 100%);
     color: #eee;
     text-decoration: none;
