--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,44 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-/* ======== ESTILOS GERAIS ======== */
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
 
+/* ======== ESTILOS GERAIS ======== */
+:root {
+
+    --federal-blue: #2e1863ff;
+    --tekhelet: #582f82ff;
+    --rust: #b84f26ff;
+    --harvest-gold: #d39536ff;
+    --silver: #bfc9cdff;
+}
 
 * {
     font-family: "Bebas Neue", Arial, sans-serif;
+}
+
+.sumamLogo {
+    background-color: white;
+    border-radius: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 220px;
+    height: 80px;
+}
+
+.sumamLogo p {
+    font-size: 30px;
+    font-family: "Nunito", sans-serif;
+    font-weight: 1000;
+    color: black;
+    margin-bottom: 0px;
+}
+
+.sumamLogo img {
+    height: 50px;
+    width: 50px;
+}
+
+.titulo{
+    display: flex;
 }
 
 body {
@@ -14,7 +49,7 @@ body {
 
 section {
     padding: 60px 10%;
-    max-width: 1200px;
+    max-width: 1500px;
     margin: auto;
 }
 
@@ -22,8 +57,9 @@ section {
 h1,
 h2,
 h3 {
-    color: #d39536;
+    color: var(--harvest-gold);
     margin-bottom: 20px;
+
 }
 
 p {
@@ -41,31 +77,77 @@ header {
     align-items: center;
 }
 
-figure{
-    border: solid 1px #bfc9cd;
+figure {
+    color: #eee;
+    border: solid 1px var(--silver);
     width: 100%;
-    background-color: #bfc9cd;
+    background-color: var(--silver);
     border-radius: 5px;
     overflow: hidden;
-
+    text-align: center;
 }
 
-img{
+video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.imagens::after {
+    content: "";
+    padding: 5px;
+}
+
+.imagens {
+    display: flex;
+    justify-content: space-between;
+    gap: 5px;
+    align-items: flex-end;
+    width: 100%;
+}
+
+.imagens figure {
+    border: solid 1px var(--federal-blue);
+    background-color: var(--federal-blue);
+    height: 100%;
+}
+
+.EstadoAtual {
+    flex-direction: column;
+}
+
+picture img {
+    border: 3px solid var(--federal-blue);
+    background-color: var(--silver);
+}
+
+img {
     width: 100%;
     height: 100%;
 }
 
-header h1 {
+.sumamPessoas{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.sumamPessoas > img{
+    object-fit: cover;
+    width: 300px;
+}
+
+header>h1 {
     font-size: 2.5em;
     margin-bottom: 10px;
 }
 
-header p {
+header>p {
     font-size: 1.2em;
     margin-bottom: 25px;
 }
 
-header > a {
+header>a {
     background-image: linear-gradient(to right, #d39536 0%, #b84f26 51%, #d39536 100%);
     color: #eee;
     text-decoration: none;
@@ -84,9 +166,6 @@ header > a {
 
 header a:hover {
     background-position: right center;
-    /* change the direction of the change here */
-    color: #fff;
-    text-decoration: none;
 }
 
 /* ======== SEÇÕES ======== */
@@ -119,7 +198,7 @@ header a:hover {
 
 /* ======== FOOTER ======== */
 footer {
-    background-color: #582f82;
+    background-color: #21163b;
     color: white;
     text-align: center;
     padding: 40px 10%;
@@ -130,6 +209,6 @@ footer p {
     margin: 5px 0;
 }
 
-ul{
+ul {
     list-style: none;
 }
